# shell-history

./: .copier-answers.yml  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  db.py  hourly.js  mkdocs.yml  monthly.js  pyproject.toml  requirements.txt  run.sh  shellhist.sh  shellhistory.db  shellhistory.sh  use_extended_history.sh
.github/ISSUE_TEMPLATE/: bug_report.md
config/: coverage.ini
docs/reference/: app.md  cli.md  db.md  shellhistory.md  shellhistory.sh.md
scripts/: fluid_admin.sh  run.sh  setup.sh
src/shellhistory/: __init__.py  __main__.py  app.py  cli.py  db.py  shellhistory.sh
src/shellhistory/static/js/: codes.js  daily_average.js  duration.js  hourly_average.js  length.js  over_time.js  top_commands.js  type.js  yearly.js
src/shellhistory/templates/: codes.html  daily.html  duration.html  home.html  hourly.html  hourly_average.html  length.html  markov_full.html  monthly.html  over_time.html  top_commands.html  top_commands_full.html  type.html  yearly.html
static/css/: home.css
static/js/: daily.js  daily_average.js  home.js  hourly.js  hourly_average.js  length.js  markov.js  markov_full.js  monthly.js  monthly_average.js  type.js  wordcloud.js
templates/: daily.html  daily_average.html  fuck.html  home.html  hourly.html  hourly_average.html  length.html  markov.html  markov_full.html  monthly.html  monthly_average.html  top_commands.html  top_commands_full.html  trending.html  type.html
templates/admin/: index.html
tests/: __init__.py  test_cli.py
(+1 files in other folders)
